# architecture-patterns-tdd-ddd-edm

./: .flake8  .gitignore  Makefile  lefthook.yaml  pyproject.toml  requirements.txt
src/allocation/adapters/: repository.py
src/allocation/domain/: model.py
src/allocation/service_layer/: handlers.py  unit_of_work.py
tests/integration/: test_uow.py
tests/unit/: test_handlers.py
