[tool.poetry]
name = "architecture-patterns-tdd-ddd-edm"
version = "0.1.0"
description = ""
authors = ["Dani Soronellas <daniel.soronellas@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "3.8.16"
sqlalchemy = "<2"
flask = "^2.3.2"
psycopg2-binary = "^2.9.6"
redis = "^4.5.5"
urllib3 = "1.26.15"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-icdiff = "^0.6"
pylint = "^2.17.4"
requests = "^2.31.0"
tenacity = "^8.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
autoflake = "^2.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
